FTEQ-2 Alignment of fields in payment modal now fixed

--- a/src/app/modals/appointment-details/appointment-detail.modal.scss
+++ b/src/app/modals/appointment-details/appointment-detail.modal.scss
@@ -76,6 +76,7 @@
   flex-wrap: nowrap;
   flex-direction: column;
   margin: 10px;
+  align-items: center;
 }
 
 .editable-time-selector,
