--- a/src/app/modals/client-details/client-details.modal.scss
+++ b/src/app/modals/client-details/client-details.modal.scss
@@ -48,6 +48,7 @@
   flex-wrap: nowrap;
   flex-direction: column;
   margin: 10px;
+  align-items: center;
 }
 
 .remove-button {
