--- a/src/styles.scss
+++ b/src/styles.scss
@@ -59,6 +59,8 @@ body {
   color: white;
   border-color: white;
   border-width: 1px;
+  width: 100%;
+  max-width: 250px;
 }
 
 .secondary-button {
@@ -66,6 +68,8 @@ body {
   color: blue;
   border-color: blue;
   border-width: 1px;
+  width: 100%;
+  max-width: 250px;
 }
 
 .primary-warning-button {
@@ -73,6 +77,8 @@ body {
   color: white;
   border-color: white;
   border-width: 1px;
+  width: 100%;
+  max-width: 250px;
 }
 
 .secondary-warning-button {
@@ -80,4 +86,6 @@ body {
   color: red;
   border-color: red;
   border-width: 1px;
+  width: 100%;
+  max-width: 250px;
 }
